09 single listing page

--- a/Christmas/templates/base.html
+++ b/Christmas/templates/base.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="{% static 'css/style.css'%} ">
 
 <!-- Lightbox -->
-<link rel="stylesheet" href="{% static 'css/Lightbox.css'%} ">
+<link rel="stylesheet" href="{% static 'css/lightbox.min.css'%} ">
 
 
    
@@ -43,7 +43,7 @@
     <script src="{% static 'js/jquery-3.3.1.min.js' %}  "></script>
     <script src="{% static 'js/bootstrap.bundle.min.js' %}  "></script>
     <script src="{% static 'js/main.js' %} "></script>
-    <script src="{% static 'js/Lightbox.min.js' %} "></script>
+    <script src="{% static 'js/lightbox.min.js' %} "></script>
 
 
 
