11 Search form filtering plus background image

--- a/Christmas/templates/listings/listings.html
+++ b/Christmas/templates/listings/listings.html
@@ -84,7 +84,7 @@
               <p>No listings available</p>
             </div>
           {% endif %}
-
+      </div>
 
 
       <div class="row">
