--- a/Christmas/templates/partials/_navbar.html
+++ b/Christmas/templates/partials/_navbar.html
@@ -20,15 +20,18 @@
           <li class="nav-item mr-3">
             <a class="nav-link" href="{% url 'listings' %}">Featured Listings</a>
           </li>
+
+
+
         </ul>
 
         <ul class="navbar-nav ml-auto">
           <li class="nav-item mr-3">
-            <a class="nav-link" href="{% url 'about' %}">
+            <a class="nav-link" href="{% url 'register' %}">
               <i class="fas fa-user-plus"></i> Register</a>
           </li>
           <li class="nav-item mr-3">
-            <a class="nav-link" href="login.html">
+            <a class="nav-link" href="{% url 'login' %}">
               <i class="fas fa-sign-in-alt"></i>
 
               Login</a>
