--- a/Christmas/templates/partials/_navbar.html
+++ b/Christmas/templates/partials/_navbar.html
@@ -26,7 +26,25 @@
         </ul>
 
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item mr-3">
+
+            {% if user.is_authenticated %}
+                 <li class="nav-item mr-3">
+            <a class="nav-link" href="{% url 'dashboard' %}">
+              <i class="fas fa-user-tie"></i> {{ user.username }}'s Dashboard</a>
+          </li>
+                <li class="nav-item mr-3">
+            <a  href="javascript:{document.getElementById('logout').submit()}" class="nav-link">
+              <i class="fas fa-sign-out-alt"></i>Logout</a>
+          </li>
+
+                <form action="{% url 'logout' %}" id="logout" method="post">
+                    {% csrf_token %}
+                    <input type="hidden">
+                </form>
+
+
+            {% else %}
+                 <li class="nav-item mr-3">
             <a class="nav-link" href="{% url 'register' %}">
               <i class="fas fa-user-plus"></i> Register</a>
           </li>
@@ -36,6 +54,9 @@
 
               Login</a>
           </li>
+            {% endif %}
+
+
         </ul>
       </div>
     </div>
