--- a/Christmas/templates/base.html
+++ b/Christmas/templates/base.html
@@ -19,7 +19,7 @@
 
    
    
-    <title>Document</title>
+    <title>BT Real Estate {% block title %} {% endblock %}</title>
   </head>
   <body>
 
